# SeedMe

./: .gitignore  CMakeLists.txt  README.md  TODO  api_demo.http  req.http
draft/: (un)serialize  Todo
keywords/: keyword_list.txt
server/src/server/: AppComponent.hpp  TODO.cpp
server/src/server/dto/: DTOs.hpp
src/: Seedme.cpp  Seedme.hpp  main.cpp  test.cpp
src/database/: CMakeLists.txt  Data.hpp  ErrorHandler.hpp  Metadata.hpp  Page.hpp  Rows.hpp  Search.hpp  SeeDB.cpp  SeeDB.hpp  SeedDB.hpp  Table.hpp  User.hpp  UserDB.hpp  testDB.cpp
src/database/data/: Data.hpp  SrcRow.hpp
src/database/dataframe/: Cursor.cpp  Cursor.hpp  DataPre.hpp  Pager.hpp  Row.cpp  Row.hpp  SrcRow.cpp  SrcRow.hpp  Table.cpp
src/database/frame/: Cursor.hpp  Deleted.hpp  ErrorHandler.hpp  Metadata.cpp  Metadata.hpp  Page.hpp  Row.hpp  Table.hpp
src/database/metadata/: Deleted.hpp  Metadata.cpp  Metadata.hpp
src/database/model/: Rows.hpp  struct.hpp
src/database/service/: Data.hpp  SeedDB.hpp  User.hpp
src/database/user/: User.hpp  UserRow.hpp
src/database/userframe/: Cursor.cpp  Cursor.hpp  Row.cpp  Row.hpp  Table.hpp  UserPre.hpp  UserRow.cpp  UserRow.hpp
src/database/util/: DatabaseError.hpp  Deleted.hpp  Metadata.hpp  Page.hpp  Table.hpp
src/encrypt/: CMakeLists.txt  TokenHandler.hpp
src/server/: App.cpp  AppComponent.hpp  Loadin.hpp  Seedme.hpp  api.hpp  struct_json.hpp  testSvr.cpp
src/server/controller/: MyController.hpp
src/server/database/: SeedDB.hpp
src/server/database/dataframe/: DataPre.hpp  SrcRow.hpp
src/server/database/frame/: Cursor.hpp  Deleted.hpp  Metadata.cpp  Metadata.hpp
src/server/database/userframe/: UserPre.hpp  UserRow.hpp
src/server/dto/: DTOs.hpp
src/server/json/: json.hpp
src/util/: ErrorHandler.hpp
src/wip/: Metadata.hpp
temp/: Cursor.cpp  Pager.cpp  Pager.hpp  Table.hpp
